--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+awscli==1.16.120
+botocore==1.12.110
 cachetools==2.1.0
+colorama==0.3.9
+docutils==0.14
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
 httplib2==0.11.3
+jmespath==0.9.4
 oauth2client==4.1.3
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
-rsa==4.0
+python-dateutil==2.8.0
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.2.0
 six==1.11.0
 uritemplate==3.0.0
+urllib3==1.24.1
