--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,47 @@
+appnope==0.1.0
 awscli==1.16.120
+backcall==0.1.0
 botocore==1.12.110
 cachetools==2.1.0
+certifi==2019.3.9
+chardet==3.0.4
 colorama==0.3.9
+decorator==4.3.2
 docutils==0.14
-google-api-python-client==1.7.4
+google-api-python-client==1.7.8
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.2.0
+greenlet==0.4.15
 httplib2==0.11.3
+idna==2.8
+ipython==7.3.0
+ipython-genutils==0.2.0
+isort==4.3.13
+jedi==0.13.3
 jmespath==0.9.4
+msgpack==0.6.1
+neovim==0.3.1
 oauth2client==4.1.3
+oauthlib==3.0.1
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
+pyflakes==2.1.1
+Pygments==2.3.1
+pynvim==0.3.2
 python-dateutil==2.8.0
 PyYAML==3.13
+requests==2.21.0
+requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.0
 six==1.11.0
+traitlets==4.3.2
 uritemplate==3.0.0
 urllib3==1.24.1
+wcwidth==0.1.7
