--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 appnope==0.1.0
 awscli==1.16.120
 backcall==0.1.0
-botocore==1.12.110
+boto3==1.9.111
+botocore==1.12.111
 cachetools==2.1.0
 certifi==2019.3.9
 chardet==3.0.4
@@ -15,16 +16,19 @@ google-auth-oauthlib==0.2.0
 greenlet==0.4.15
 httplib2==0.11.3
 idna==2.8
+ipdb==0.11
 ipython==7.3.0
 ipython-genutils==0.2.0
 isort==4.3.13
 jedi==0.13.3
 jmespath==0.9.4
+mock==2.0.0
 msgpack==0.6.1
 neovim==0.3.1
 oauth2client==4.1.3
 oauthlib==3.0.1
 parso==0.3.4
+pbr==5.1.3
 pexpect==4.6.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
